<resources>
    <string name="app_name">Release Tracker</string>
    <string name="add_library">Add library</string>
    <string name="library_name">Library name</string>
    <string name="library_url">Library URL</string>
    <string name="library_added">Library added</string>
    <string name="library_name_empty">Library name cannot be empty</string>
    <string name="library_url_empty">Library URL cannot be empty</string>
    <string name="library_url_invalid">Library URL is invalid</string>
    <string name="worker_tag">UPDATE_VERSION_WORKER</string>
    <string name="sort">Sort</string>
    <string name="select_sort_order">Select Sort Order</string>
    <string name="last_check_for_updates">Last check: %s</string>
    <string name="no_libraries">There are no libraries</string>
    <string name="night_mode">Night mode…</string>
    <string name="select_night_mode">Select night mode</string>
    <string name="search">Search</string>
    <string name="pin_library">Pin library</string>
    <string name="unpin_library">Unpin library</string>
    <string name="more_options">More options</string>
    <string name="clear_search_bar">Clear search bar</string>
    <string name="close_search_bar">Close search bar</string>
    <string name="notification_channel_name">General</string>
    <string name="notification_channel_description">All notifications of the app</string>
    <string name="notification_title">Updates Available</string>
    <string name="notification_body">There are updates for the following libraries:\n%s</string>
    <string name="back">Go back</string>
    <string name="no_browser_found_message">No browser found to open %s</string>
    <string name="delete_library">Delete library</string>
</resources>