...
import ir.fallahpoor.releasetracker.features.libraries.LibrariesListScreenUiState
import ir.fallahpoor.releasetracker.features.libraries.LibrariesViewModel
import ir.fallahpoor.releasetracker.theme.ReleaseTrackerTheme

object LibrariesListScreenTags {
    const val SCREEN = "librariesListScreen"
    const val TOOLBAR = "librariesListScreenToolbar"
    const val CONTENT = "librariesListScreenContent"
}

@Composable
fun LibrariesListScreen(
    librariesViewModel: LibrariesViewModel = hiltViewModel(),
...
